--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             height: 100vh;
             background: #f4f4f4;
             transition: background 0.3s;
+            position: relative;
         }
         .reader {
             font-size: 48px;
@@ -34,22 +35,35 @@
             color: white;
         }
         .controls {
-            margin-top: 20px;
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
             display: flex;
             gap: 10px;
         }
-        .controls button, .controls select {
-            padding: 10px;
-            font-size: 16px;
+        .wpm-display {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .start-button {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px 20px;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
+    <div class="wpm-display" id="wpmDisplay">WPM: 300</div>
     <div class="reader" id="reader">Loading...</div>
+    <button class="start-button" id="toggle">Start</button>
     <div class="controls">
-        <button id="toggle">Start</button>
         <button id="decrease">-50 WPM</button>
-        <span id="wpmDisplay">WPM: 300</span>
         <button id="increase">+50 WPM</button>
         <select id="wordCount">
             <option value="1">1 Word</option>
@@ -68,13 +82,14 @@
         async function loadText() {
             const response = await fetch('processed_text.json');
             const data = await response.json();
-            words = data.word_pairs;
+            words = data.words;
             updateDisplay();
         }
 
         function updateDisplay() {
             if (words.length === 0) return;
-            document.getElementById('reader').textContent = words[index] || "";
+            const textToShow = words.slice(index, index + wordCount).join(" ");
+            document.getElementById('reader').textContent = textToShow || "";
             document.getElementById('wpmDisplay').textContent = `WPM: ${wpm}`;
         }
 
@@ -82,8 +97,8 @@
             clearInterval(interval);
             interval = setInterval(() => {
                 if (!isPaused && index < words.length) {
-                    document.getElementById('reader').textContent = words[index];
-                    index++;
+                    updateDisplay();
+                    index += wordCount;
                 }
             }, 60000 / wpm);
         }
@@ -108,7 +123,7 @@
 
         document.getElementById("wordCount").addEventListener("change", (event) => {
             wordCount = parseInt(event.target.value);
-            // Update word processing logic based on selected word count
+            updateDisplay();
         });
 
         document.addEventListener("keydown", (event) => {
