--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             color: white;
         }
         .dark-mode .reader {
-            background: #333;
+            background: black;
             color: white;
         }
         .controls {
