--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speed Reader</title>
+    <title>JetRead</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,7 +31,7 @@
             color: white;
         }
         .dark-mode .reader {
-            background: #333;
+            background: black;
             color: white;
         }
         .controls {
