--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         :root {
             --font-size: 48px;
             --line-height: 1.5;
-            --text-color: black;
             --button-bg: #007bff;
             --button-hover: #0056b3;
         }
@@ -30,18 +29,21 @@
         .light-mode {
             background: #f4f4f4;
             color: black;
+            --text-color: black;
             --button-bg: #4CAF50;
             --button-hover: #45a049;
         }
         .dark-mode {
             background: #1a1a1a;
             color: white;
+            --text-color: white;
             --button-bg: #2196F3;
             --button-hover: #1976D2;
         }
         .sepia-mode {
             background: #f4ecd8;
             color: #5b4636;
+            --text-color: #5b4636;
             --button-bg: #795548;
             --button-hover: #5D4037;
         }
